data/collection/fixes/descriptions/kotlin/KT-15334
```
fun test() {
    do {
        val s: String
        s = ""
    } while (true)
}
```

```
test.kt:4:9: error: val cannot be reassigned
        s = ""
        ^
```